# rag-assistant-template

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
data/: links.txt
db_metadata_v5/4238c7f3-63f6-4aa3-a733-36c423f9946b/: index_metadata.pickle
db_metadata_v5/d846d05a-5126-4aa6-84a0-aa767e4d8ca9/: index_metadata.pickle
docs/: datagrid-docs-inventory.md
docs/administration-guide/md/: administration-scenarios.md  blob-clob-types.md  cache-object-compression-plugin.md  cdc-manager-plugin.md  configuration.md  control-sh.md  faq.md  ignite-dump-reader.md  index-reader-sh.md  index.md  jdbc-index.md  jdbs-client-driver.md  jdbs-driver.md  log-analyzer.md  logger.md  maintenance-mode.md  migrate-cache-configuration-sh.md  monitoring-events.md  operational-commands.md  plugins.md  (+11 more)
env/: pyvenv.cfg
models/: index.py
providers/: ollama.py  together.py
public/: chat.html  chat.js  iframe.html
public/css/: style.css
scripts/: ingest.py  ingest_adoc.py  ingest_javadoc.py  scrapper.py
scripts/jira/: __init__.py  count_support_tickets.py  export_support_tickets.py  ticket_summary_saver.py  tiket_beholder.py  tiket_saver.py
src/rag_assistant/: __init__.py  cli.py  config.py  docs.py  factory.py  indexing.py  inspection.py  ports.py  rag.py  retrieval.py  settings.py
tests/: test_adapters.py  test_cli.py  test_config.py  test_docs_loader.py  test_indexing.py  test_ingest_adoc.py  test_inspection.py  test_jira_export.py  test_jira_snapshot.py  test_main.py  test_query_rag.py  test_rag_service.py  test_retrieval.py
(+176 files in other folders)
